kubernetes/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: clblount9/pink-percival:latest
        name: frontend
        imagePullPolicy: Always          
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "1024Mi"
            cpu: "100m"                
      restartPolicy: Always
