kubernetes/redis-master.yaml

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redis-master
  labels:
    app: redis-master
spec:
  selector:
    matchLabels:
      app: redis-master
      role: master
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-master
        role: master
        tier: backend
    spec:
      containers:
      - name: redis-master
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            memory: "1024Mi"
            cpu: "500m"          
        ports:
        - containerPort: 6379
