kubernetes/redis-search.yaml

apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: redissearch
  labels:
    app: redissearch
spec:
  selector:
    matchLabels:
      app: redissearch
      role: search
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: redissearch
        role: search
        tier: backend
    spec:
      containers:
      - name: redissearch
        image: redislabs/redisearch
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            memory: "1024Mi"
            cpu: "500m"          
        ports:
        - containerPort: 6379
