kubernetes/reflexive-persistance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: reflexive-persistance-service
  name: reflexive-persistance
spec:
  selector:
    matchLabels:
      app: reflexive-persistance
  replicas: 2
  template:
    metadata:
      labels:
        app: reflexive-persistance
    spec:
      containers:
      - image: clblount9/pink-percival
        name: reflexive-persistance
        imagePullPolicy: Always          
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"                
      restartPolicy: Always
