kubernetes/cliff-clavin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliff-clavin
  labels:
    app: cliff-clavin
    role: master
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: cliff-clavin
    role: master
    tier: backend
