kubernetes/redis-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis-master
    role: master
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis-master
    role: master
    tier: backend
