kubernetes/redis-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redisearch
  labels:
    app: redissearch
    role: search
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - port: 6380
    targetPort: 6379
    name: custom-port
  - port: 6379
    targetPort: 6379
    name: default-redis-port
  selector:
    app: redissearch
    role: search
    tier: backend
